hphp/hack/test/typecheck/class_pointers/type_separate/simple_hint.php.exp
ERROR: File "simple_hint.php", line 9, characters 10-11:
Invalid return type (Typing[4110])
  File "simple_hint.php", line 8, characters 30-45:
  Expected `classname<mixed>`
  File "simple_hint.php", line 8, characters 12-23:
  But got `class<mixed>`
ERROR: File "simple_hint.php", line 12, characters 10-11:
Invalid return type (Typing[4110])
  File "simple_hint.php", line 11, characters 34-45:
  Expected `class<mixed>`
  File "classname.hhi", line 12, characters 27-32:
  But got `string`
